<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.log.uiLog.LoginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_gravity="center"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_main"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_user_circle_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textViewUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_usuario"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_password"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            app:icon="@drawable/ic_login_24"
            android:text="@string/txt_btn_inicio_session"/>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            app:icon="@drawable/ic_app_registration_24"
            android:text="@string/txt_btn_registrarse"
            android:onClick="setOnClick"/>

    </LinearLayout>


</RelativeLayout>