<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/fondo_main"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_rounded_100"
            android:padding="@dimen/nav_header_vertical_spacing"

            android:contentDescription="@string/nav_header_desc"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/icono_mujer" />

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="5dp"
            android:textStyle="bold|italic"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:paddingTop="6dp"
            android:paddingHorizontal="@dimen/nav_header_horizontal_spacing"
            android:text="@string/nav_header_title"/>

        <TextView
            android:id="@+id/txtNombreUsuario"
            android:layout_width="match_parent"
            android:background="@drawable/bg_rounded"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textSize="14dp"
            android:textColor="@color/white"/>

    </LinearLayout>


</RelativeLayout>