<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_lista_plantas"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="8dp"
        app:cardElevation="10dp"
        android:clickable="true"
        android:checkable="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPlanta"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:padding="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:scaleType="centerCrop"
                android:src="@drawable/fondo_main_log"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/semi_transparente_verde_oscuro"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/imgPlanta"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_nombre_planta"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/verde_oscuro"
                        android:text="@string/content_title_card" />

                    <ImageButton
                        android:id="@+id/btn_ic_agregar_favorito"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:paddingTop="20dp"
                        android:padding="20dp"
                        android:backgroundTint="@color/transparente"
                        android:foregroundGravity="right"
                        android:src="@drawable/ic_favorite_border_24"
                        android:clickable="true"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_nombre_cientifico_planta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/cafe_oscuro"
                    android:text="@string/content_subtitle_card"/>

                <TextView
                    android:id="@+id/txt_descripcion_planta"
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:layout_margin="5dp"
                    android:textSize="14dp"
                    android:text="@string/content_description"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="2">

                    <TableRow>
                        <TextView
                            android:id="@+id/txt_tipo_planta_luz"
                            android:layout_weight="1"
                            android:text="@string/txt_tipo_planta_luz"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/verde_oscuro"
                            android:background="@color/semi_transparente_verde_oscuro"
                            android:layout_marginVertical="5dp"
                            android:paddingVertical="5dp"
                            />
                        <ImageView
                            android:id="@+id/ic_tipo_planta_luz"
                            android:layout_weight="1"
                            android:src="@drawable/ic_wb_sunny_24"
                            android:layout_marginVertical="10dp"
                            />

                    </TableRow>

                </TableLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_btn_leer_mas"
                    android:gravity="center"
                    android:layout_gravity="center"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

            </LinearLayout>


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>