<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView

        android:id="@+id/card_lista_tiendas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="8dp"
        app:cardElevation="10dp"
        android:clickable="true"
        android:checkable="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgTienda"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_list_model_3"
                app:civ_border_color="@color/semi_transparente_verde_oscuro"
                app:civ_border_width="1dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/imgTienda"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_nombre_tienda"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/cafe_oscuro"
                    android:text="@string/content_title_card" />

                <TextView
                    android:id="@+id/txt_descripcion_tienda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="14dp"
                    android:text="@string/content_description"/>

                <TextView
                    android:id="@+id/txt_direccionTienda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="14dp"
                    android:text="@string/content_description"/>

                <Button
                    android:id="@+id/btnLlamarTienda"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_btn_llamar_tienda"
                    android:gravity="center"
                    android:layout_gravity="center"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

            </LinearLayout>


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>